RESOLVED FIXED24852
Inconsistent flags might lead to link failure for ARM/RVCT release builds
https://bugs.webkit.org/show_bug.cgi?id=24852
Summary Inconsistent flags might lead to link failure for ARM/RVCT release builds
Laszlo Gombos
Reported 2009-03-26 13:37:39 PDT
Fix regression introduced by http://trac.webkit.org/changeset/40404. During GNU mode RVCT compilation __GNUC__ is defined but COMPILER(GCC) is false. The output of gperf (HTMLEntityNames.c) generates code which will use the __GNUC__ flag; so PreloadScanner.cpp needs to use the __GNUC__ flag to stay consistent, otherwise GNU mode RVCT compilation will fail to link. The solution is to simply revert the change in PreloadScanner.cpp. Patch will follow.
Attachments
Revert change in PreloadScanner.cpp made by r40404 (1.07 KB, patch)
2009-03-26 14:04 PDT, Laszlo Gombos
hausmann: review+
Laszlo Gombos
Comment 1 2009-03-26 14:04:23 PDT
Created attachment 28985 [details] Revert change in PreloadScanner.cpp made by r40404
Simon Hausmann
Comment 2 2009-03-27 06:05:04 PDT
Comment on attachment 28985 [details] Revert change in PreloadScanner.cpp made by r40404 Looks good to me
Simon Hausmann
Comment 3 2009-03-27 06:05:23 PDT
Landed in r42036
Note You need to log in before you can comment on or make changes to this bug.