2009-03-27  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=24852
        Build fix for GNU mode RVCT compilation

Canonical link: https://commits.webkit.org/34092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42036 268f45cc-cd09-0410-ab3c-d52691b4dbfc